--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
-name: ClearLagg
+name: NekoCraftAntiLag
 main: ClearLagg\Loader
 version: 1.1.0
-api: 1.0.0
+api: [1.0.0,2.0.0,3.0.0,3.0.0-ALPHA5]
 author: LegendOfMCPE
 website: https://github.com/LegendOfMCPE/ClearLagg
 description: "Port of Bukkit ClearLagg for PocketMine Servers"
